ws_ros2_opencv/log/build_2024-11-12_16-58-48/ros2_opencv/stderr.log
  File "/home/epue/capstone.git/capstone/ws_ros2_opencv/install/ros2_opencv/lib/python3.10/site-packages/ros2_opencv/driving.py", line 75
    def up_down(self:)
                     ^
SyntaxError: invalid syntax

